--- a/lib/components/fo_dropdown_list/fo_dropdown_option_component.scss
+++ b/lib/components/fo_dropdown_list/fo_dropdown_option_component.scss
@@ -55,9 +55,9 @@
 :host:hover {
   table {
     tr {
-
       td,
       td>div,
+      td>div#label,
       td.leadingIcon>fo-icon {
         color: white;
       }
