some style adjustments

--- a/lib/components/fo_dropdown_list/_mixins.scss
+++ b/lib/components/fo_dropdown_list/_mixins.scss
@@ -14,7 +14,7 @@
       }
 
       div#secondaryLabel {
-        color: $borderColor;
+        color: darken($borderColor, 20%);
       }
     }
 
@@ -30,7 +30,7 @@
       table {
         tr {
           td.icon {
-            width: $size;
+            width: $size !important;
             fo-icon {
               font-size: $size;
             }
