--- a/lib/components/fo_dropdown_list/fo_dropdown_option_component.html
+++ b/lib/components/fo_dropdown_list/fo_dropdown_option_component.html
@@ -12,7 +12,8 @@
            alt="image">
     </td>
     <td>
-      <div id="label">{{model.renderLabel}}</div>
+      <div id="label"
+           [class.semi-bold]="model.renderSecondaryLabel?.isEmpty == false">{{model.renderLabel}}</div>
       <div id="secondaryLabel">{{model.renderSecondaryLabel}}</div>
     </td>
     <td class="black-color info"
