--- a/lib/components/fo_dropdown_list/fo_dropdown_option_component.scss
+++ b/lib/components/fo_dropdown_list/fo_dropdown_option_component.scss
@@ -14,8 +14,8 @@
       td {
         overflow: hidden;
         text-overflow: ellipsis;
-
-        div#label {
+        
+        div#label.semi-bold {
           font-weight: 600;
         }
 
