--- a/lib/components/fo_dropdown_select/_mixins.scss
+++ b/lib/components/fo_dropdown_select/_mixins.scss
@@ -1,7 +1,7 @@
-@import 'package:angular_components/material_icon/mixins';
-@import '../fo_button/mixins';
-@import '../fo_dropdown_list/mixins';
-@import '../fo_label/mixins';
+@import "package:angular_components/material_icon/mixins";
+@import "../fo_button/mixins";
+@import "../fo_dropdown_list/mixins";
+@import "../fo_label/mixins";
 
 @mixin fo-dropdown-select-font-size($size) {
   ::ng-deep fo-dropdown-select {
@@ -10,24 +10,51 @@
     div#flexAligner {
       div#selector {
         font-size: $size;
-        @include material-icon-size(1.5*$size !important);
+        @include material-icon-size(1.5 * $size !important);
 
         div#selectedValue {
-          padding: 0.4*$size 0.8*$size !important;
+          padding: 0.4 * $size 0.8 * $size !important;
 
           fo-icon {
-            margin-right: 1.5*$size;
+            margin-right: 1.5 * $size;
           }
         }
       }
 
-      ::ng-deep fo-button>button {
-        padding: 0.4*$size 0.8*$size !important;
+      ::ng-deep fo-button > button {
+        padding: 0.4 * $size 0.8 * $size !important;
       }
     }
 
-
     @include fo-button-font-size($size);
     @include fo-dropdown-list-font-size($size);
+  }
+}
+
+@mixin fo-dropdown-select-dropdown-icon-color($color) {
+  ::ng-deep fo-dropdown-select {
+    div#flexAligner {
+      fo-label {
+        div#selector {
+          fo-icon.arrow {
+            color: $color;
+          }
+        }
+      }
+    }
+  }
+}
+
+@mixin fo-dropdown-select-selected-value-color($color) {
+  ::ng-deep fo-dropdown-select {
+    div#flexAligner {
+      fo-label {
+        div#selector {
+          div#selectedValue {
+            color: $color;
+          }          
+        }
+      }
+    }
   }
 }
