--- a/lib/components/fo_button/_mixins.scss
+++ b/lib/components/fo_button/_mixins.scss
@@ -1,4 +1,4 @@
-@import 'package:angular_components/material_icon/mixins';
+@import "package:angular_components/material_icon/mixins";
 
 @mixin fo-button-font-size($size) {
   ::ng-deep fo-button {
@@ -25,27 +25,26 @@
 }
 
 @mixin fo-button-colors($color, $backgroundColor, $backgroundColorDisabled) {
-
   // Default
-  ::ng-deep fo-button:not([white])>button {
+  ::ng-deep fo-button:not([white]) > button {
     background-color: $backgroundColor;
     border-color: $backgroundColor;
     color: $color;
   }
 
   // Selected
-  ::ng-deep fo-button[white].selected>button:not(:disabled).themeable {
+  ::ng-deep fo-button[white].selected > button:not(:disabled).themeable {
     background-color: $backgroundColor;
     border-color: $backgroundColor;
     color: $color;
   }
 
-  ::ng-deep fo-button:not([white]).selected>button:not(:disabled).themeable {
+  ::ng-deep fo-button:not([white]).selected > button:not(:disabled).themeable {
     filter: brightness(120%);
   }
 
   // Hover effect for default
-  ::ng-deep fo-button:not([noHover]):not([white])>button:not(:disabled).themeable:hover {
+  ::ng-deep fo-button:not([noHover]):not([white]) > button:not(:disabled).themeable:hover {
     filter: brightness(120%);
   }
 
@@ -56,11 +55,10 @@
     color: white;
   }
 
-
   // Disabled
-  ::ng-deep fo-button>button.themeable:disabled {
+  ::ng-deep fo-button > button.themeable:disabled {
     background-color: $backgroundColorDisabled !important;
     border-color: darken($backgroundColorDisabled, 10%) !important;
-    color: white !important;
+    color: darken($backgroundColorDisabled, 20%) !important;
   }
 }
