--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -20,7 +20,7 @@
            (keyup)="onKeyUp($event)"
            (focus)="onFocus($event)"
            (blur)="onBlur($event)">
-    <fo-icon *ngIf="clearIcon == true && value?.isEmpty == false"
+    <fo-icon *ngIf="clearIcon == true"
              class="clear"
              icon="close"
              [material]="materialIcons"
