--- a/lib/components/fo_dropdown_select/_mixins.scss
+++ b/lib/components/fo_dropdown_select/_mixins.scss
@@ -6,6 +6,7 @@
 @mixin fo-dropdown-select-font-size($size) {
   ::ng-deep fo-dropdown-select {
     @include fo-label-font-size($size);
+    @include fo-button-vertical-padding(0.4 * $size);
 
     div#flexAligner {
       div#selector {
@@ -19,11 +20,7 @@
             margin-right: 1.5 * $size;
           }
         }
-      }
-
-      ::ng-deep fo-button > button {
-        padding: 0.4 * $size 0.8 * $size !important;
-      }
+      }      
     }
 
     @include fo-button-font-size($size);
