--- a/lib/components/fo_text_input/_shared.scss
+++ b/lib/components/fo_text_input/_shared.scss
@@ -9,10 +9,10 @@ $borderRadius: $x-small;
   width: 100%;
   box-sizing: border-box;
   outline: none;
-  line-height: 200%;
+  line-height: 100%;
   border-width: 1px;
   border-style: solid;
-  padding: $small $small;
+  padding: $medium $small;
   min-width: 7rem;
   color: #555;
   box-shadow: none;
