--- a/lib/components/fo_text_input/_shared.scss
+++ b/lib/components/fo_text_input/_shared.scss
@@ -10,9 +10,8 @@ $borderRadius: $x-small;
   box-sizing: border-box;
   outline: none;
   line-height: 100%;
-  border-width: 1px;
-  border-style: solid;
-  padding: $medium $small;
+  border-width: 0;
+  padding: $medium $x-small;
   min-width: 7rem;
   color: #555;
   box-shadow: none;
