--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -5,14 +5,10 @@
              class="gray-color leading"
              [icon]="leadingIcon"
              [material]="materialIcons"></fo-icon>
-    <input class="gray-color-bright"
-           type="{{type}}"
+    <input type="{{type}}"
            [autoFocus]="autoFocus"
            [disabled]="disabled == true"
-           [placeholder]="placeholder"
-           [class.noRightBorder]="actionButtonLabel != null"
-           [class.leftPadding]="leadingIcon != null"
-           [class.rightPadding]="clearIcon == true"
+           [placeholder]="placeholder"           
            [class.color-alert]="control?.valid == false && control?.pristine != true"
            [ngModel]="value"
            (ngModelChange)="onValueChange($event)"
