--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -14,6 +14,7 @@ $transitionSpeed: 0.3s ease;
 @import 'components/fo_modal/mixins';
 @import 'components/fo_quiz/mixins';
 @import 'components/fo_tab/mixins';
+@import 'components/fo_text_input/mixins';
 
 @mixin foregroundColor($color) {
   color: $color;
@@ -41,8 +42,7 @@ $transitionSpeed: 0.3s ease;
 
   @include fo-button-colors(white, $primaryColor, $grayColorBright);
   @include fo-dropdown-list-colors($primaryColor, $grayColor, $grayColorBright);
-  @include fo-dropdown-select-dropdown-icon-color($primaryColor);
-  @include fo-dropdown-select-selected-value-color($grayColor);
+  @include fo-dropdown-select-colors($grayColor, $grayColorBright, $primaryColor);
   @include fo-dropdown-select-multi-options-background-color($primaryColor);
   @include fo-dropdown-select-multi-options-border-color($grayColor);
   @include fo-file-upload-border-color($grayColorBright);
@@ -50,6 +50,7 @@ $transitionSpeed: 0.3s ease;
   @include fo-label-color($grayColor);
   @include fo-modal-colors(lighten($grayColorBright, 10%));
   @include fo-tab-panel-colors(darken($grayColor, $lightstep), $primaryColor);
+  @include fo-text-input-colors($grayColor, $grayColorBright, $grayColor);
 
   material-spinner {
     border-color: $primaryColor;
