--- a/lib/components/fo_button/fo_button_component.scss
+++ b/lib/components/fo_button/fo_button_component.scss
@@ -5,9 +5,11 @@
 :host {
   display: inline-block;
   font-size: 0;
+  align-self: stretch;
 
   button {
     width: 100%;
+    height: 100%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
