--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
@@ -1,14 +1,12 @@
-<div id="flexAligner">
-  <fo-label [value]="label"
-            (click)="onClick($event)">
+<fo-label [value]="label">
+  <div id="flexContainer"
+       [class.focus]="dropdownVisible">
     <div id="selector"
-         class="gray-color-bright"
          [class.noRightBorder]="actionButtonLabel != null"
          [class.disabled]="disabled == true"
-         [class.focus]="dropdownVisible">
+         (click)="onClick($event)">
       <div id="selectedValue">
-        <fo-icon class="color-primary"
-                 *ngIf="selectedOption?.renderIcon != null"
+        <fo-icon *ngIf="selectedOption?.renderIcon != null"
                  [icon]="selectedOption?.renderIcon"
                  [material]="materialIcons">
         </fo-icon>
@@ -18,16 +16,19 @@
                [material]="true"
                icon="keyboard_arrow_down"></fo-icon>
     </div>
-  </fo-label>
-  <fo-button *ngIf="actionButtonLabel != null"
-             [label]="actionButtonLabel"             
-             noLeftBorder
-             [disabled]="disabled || selectedOption == null"
-             (trigger)="actionButtonController.add($event)"></fo-button>
-</div>
+    <fo-button *ngIf="actionButtonLabel != null"
+               [label]="actionButtonLabel"
+               [attr.square]="square"
+               noLeftBorder
+               [disabled]="disabled || selectedOption == null"
+               (trigger)="onActionButtonTrigger($event)"></fo-button>
+  </div>
+</fo-label>
+
 <fo-dropdown-list *ngIf="options != null && dropdownVisible == true && disabled != true"
                   [attr.square]="square"
                   [options]="options"
+                  [offsetHorizontal]="1"
                   [showSearch]="showSearch"
                   [constrainToViewPort]="constrainToViewPort"
                   [allowNullSelection]="allowNullSelection"
