--- a/lib/components/fo_text_input/_mixins.scss
+++ b/lib/components/fo_text_input/_mixins.scss
@@ -6,46 +6,26 @@
 @mixin fo-text-input-font-size($size) {
   ::ng-deep fo-text-input {
     @include fo-label-font-size($size);
+    @include fo-button-vertical-padding(0.4 * $size);
+    @include fo-dropdown-list-font-size($size);
 
     div#flexContainer {
+      @include fo-button-font-size($size);
 
       input,
       input:focus {
+        padding: 0.4 * $size 0.5 * $size !important;
         font-size: $size;
       }
 
-      material-icon.leading {
-        transform: translateX(0.5*$size) !important;
-        @include material-icon-size(1.2*$size);
-      }
-
       fo-icon.leading {
-        transform: translateX(0.5*$size) !important;
-        font-size: 1.2*$size;
-      }
-
-      material-icon.clear {
-        transform: translateX(-1.5*$size) !important;
-        @include material-icon-size($size !important);
-      }
-
-      fo-icon.clear {
-        transform: translateX(-1.5*$size) !important;
         font-size: $size !important;
       }
 
-      input.leftPadding {
-        padding-left: 2*$size !important;
+      fo-icon.clear {
+        font-size: $size !important;
       }
-
-      input.rightPadding {
-        padding-right: 2*$size !important;
-      }
-
-      @include fo-button-font-size($size);
     }
-
-    @include fo-dropdown-list-font-size($size);
   }
 
   ::ng-deep fo-textarea-input {
@@ -64,4 +44,22 @@
     }
   }
 
+}
+
+@mixin fo-text-input-colors($textColor, $borderColor, $iconColor) {
+  ::ng-deep fo-text-input {
+    fo-label {
+      div#flexContainer {
+        border-color: $borderColor;
+
+        input {
+          color: $textColor;
+        } 
+
+        fo-icon {
+          color: $iconColor;
+        }
+      }
+    }
+  }
 }
