--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -32,6 +32,7 @@
     border-radius: $borderRadius;
     border-width: 1px;
     border-style: solid;
+    overflow: hidden;
 
     input {
       align-self: stretch;
