removed dropdown-select-multi-font-size mixin

--- a/lib/components/fo_dropdown_select/_mixins.scss
+++ b/lib/components/fo_dropdown_select/_mixins.scss
@@ -26,6 +26,16 @@
       }
     }
   }
+
+  ::ng-deep fo-dropdown-select-multi {
+    div#selectedOptions {
+      ul {
+        li {
+          font-size: $size;
+        }
+      }
+    }
+  }
 }
 
 @mixin fo-dropdown-select-colors($selectedValueColor, $borderColor, $iconColor) {
