a bunch of minor style tweaks

--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -44,7 +44,7 @@ $transitionSpeed: 0.3s ease;
   @include fo-dropdown-list-colors($primaryColor, $grayColor, $grayColorBright);
   @include fo-dropdown-select-colors($grayColor, $grayColorBright, $primaryColor);
   @include fo-dropdown-select-multi-options-background-color($primaryColor);
-  @include fo-dropdown-select-multi-options-border-color($grayColor);
+  @include fo-dropdown-select-multi-options-border-color($grayColorBright);
   @include fo-file-upload-border-color($grayColorBright);
   @include fo-image-file-border-color($grayColorBright);
   @include fo-label-color($grayColor);
