--- a/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
+++ b/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
@@ -1,3 +1,4 @@
+<p>selectedId: {{selectedId}}</p>
 <fo-dropdown-select [label]="label"
                     [options]="filteredOptions"
                     [disabled]="disabled"
