--- a/lib/components/fo_icon/fo_icon_component.scss
+++ b/lib/components/fo_icon/fo_icon_component.scss
@@ -1,4 +1,10 @@
+@import 'package:angular_components/material_icon/mixins';
+
 :host {
   display: inline-flex;
   align-items: center;
+
+  material-icon {
+    @include material-icon-size(1em);
+  }
 }
