--- a/lib/components/fo_button/_mixins.scss
+++ b/lib/components/fo_button/_mixins.scss
@@ -3,14 +3,8 @@
 @mixin fo-button-font-size($size) {
   ::ng-deep fo-button {
     button.themeable {
-      font-size: $size !important;
-      @include material-icon-size($size * 1.5 !important);
-    }
-  }
-
-  ::ng-deep fo-button[dense] {
-    button.themeable {
-      @include material-icon-size($size * 1.3 !important);
+      font-size: $size;
+      @include material-icon-size($size);
     }
   }
 }
@@ -25,27 +19,28 @@
 }
 
 @mixin fo-button-colors($color, $backgroundColor, $backgroundColorDisabled) {
+
   // Default
-  ::ng-deep fo-button:not([white]) > button {
+  ::ng-deep fo-button:not([white])>button {
     background-color: $backgroundColor;
     border-color: $backgroundColor;
     color: $color;
   }
 
   // Selected (white)
-  ::ng-deep fo-button[white].selected > button:not(:disabled).themeable {
+  ::ng-deep fo-button[white].selected>button:not(:disabled).themeable {
     background-color: $backgroundColor;
     border-color: $backgroundColor;
     color: $color;
   }
 
   // Selected (not white)
-  ::ng-deep fo-button:not([white]).selected > button:not(:disabled).themeable {
+  ::ng-deep fo-button:not([white]).selected>button:not(:disabled).themeable {
     filter: brightness(120%);
   }
 
   // Hover effect (not white)
-  ::ng-deep fo-button:not([noHover]):not([white]) > button:not(:disabled).themeable:hover {
+  ::ng-deep fo-button:not([noHover]):not([white])>button:not(:disabled).themeable:hover {
     filter: brightness(120%);
   }
 
@@ -57,7 +52,7 @@
   }
 
   // Disabled
-  ::ng-deep fo-button > button.themeable:disabled {
+  ::ng-deep fo-button>button.themeable:disabled {
     background-color: $backgroundColorDisabled !important;
     border-color: darken($backgroundColorDisabled, 10%) !important;
     color: darken($backgroundColorDisabled, 20%) !important;
