--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -8,21 +8,12 @@
 :host {
   display: block;
   position: relative;
+  font-size: 1rem;
 
-  input {
-    background-color: white;
-    outline: none;
-    margin: 0;
-  }
-
-  input::selection {
-    color: white;
-  }
-
-  input,
-  input:focus {
-    font-size: 1rem;
-  }
+  @include fo-label-font-size(1em);
+  @include fo-button-vertical-padding(0.4em);
+  @include fo-dropdown-list-font-size(1em);
+  @include fo-button-font-size(1em);
 
   div#flexContainer {
     display: flex;
@@ -35,10 +26,19 @@
     overflow: hidden;
 
     input {
+      background-color: white;
+      outline: none;
+      margin: 0;
       align-self: stretch;
+      font-size: 1em;
+    }
+  
+    input::selection {
+      color: white;
     }
 
     fo-icon {
+      font-size: 1em;
       box-shadow: none;
       -webkit-box-shadow: none;
     }
@@ -47,12 +47,10 @@
       z-index: 2;
       cursor: pointer;
       font-size: 0.9em;
-      margin-right: $small;
     }
 
     fo-icon.leading {
       z-index: 2;
-      margin-left: $small;
     }
 
     input {
@@ -68,9 +66,7 @@
 
   div#flexContainer:focus-within {
     @include boxShadow();
-  }
-
-  @include fo-button-font-size(1rem);
+  }  
 }
 
 
