--- a/lib/components/fo_text_input/fo_textarea_input_component.html
+++ b/lib/components/fo_text_input/fo_textarea_input_component.html
@@ -1,7 +1,6 @@
 <fo-label [value]="label"
           [error]="control?.valid == false && control?.pristine != true">
-  <textarea class="gray-color-bright"
-            [disabled]="disabled"
+  <textarea [disabled]="disabled"
             [placeholder]="placeholder"
             [class.color-alert]="control?.valid == false && control?.pristine != true"
             noresize
